--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -147,30 +147,30 @@
 
     <div class="flex-column" *ngIf="![2,3].includes(recipient.status)">
       <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 2">
-        <p class="d-flex justify-content-center mb-4">XEM XÉT HỢP ĐỒNG</p>
-        <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
+        <p class="d-flex justify-content-center mb-4">{{'contract.review' | translate}}</p>
+        <p class="d-flex mb-2 text-align-left mx-3">{{'content.confirm' | translate}}</p>
         <div class="confirm-radio d-flex justify-content-between mx-4">
           <div class="radio-confirm">
             <input id="radio-confirm-consider" type="radio" name="confirm-radio-consider" [value]="1" [(ngModel)]="confirmConsider">
-            <label for="radio-confirm-consider" class="ms-2">Đồng ý</label>
+            <label for="radio-confirm-consider" class="ms-2">{{'btn.accept' | translate}}</label>
           </div>
           <div class="radio-refuse">
             <input id="radio-refuse-consider" type="radio" name='confirm-radio-consider' [value]="2" [(ngModel)]="confirmConsider">
-            <label for="radio-refuse-consider" class="ms-2">Không đồng ý</label>
+            <label for="radio-refuse-consider" class="ms-2">{{'btn.not.accept' | translate}}</label>
           </div>
         </div>
       </div>
       <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
-        <p class="d-flex justify-content-center mb-4 text-uppercase">XÁC NHẬN KÝ HỢP ĐỒNG</p>
-        <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
+        <p class="d-flex justify-content-center mb-4 text-uppercase">{{'contract.sign.confirm' | translate}}</p>
+        <p class="d-flex mb-2 text-align-left mx-3">{{'content.confirm' | translate}}</p>
         <div class="confirm-radio d-flex justify-content-between mx-4">
           <div class="radio-confirm">
             <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
-            <label for="radio-confirm-secretary" class="ms-2">Đồng ý</label>
+            <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept' | translate}}</label>
           </div>
           <div class="radio-refuse">
             <input id="radio-refuse-secretary" type="radio" name='confirm-radio-secretary' [value]="2" [(ngModel)]='confirmSignature'>
-            <label for="radio-refuse-secretary" class="ms-2">Không đồng ý</label>
+            <label for="radio-refuse-secretary" class="ms-2">{{'btn.not.accept' | translate}}</label>
           </div>
         </div>
       </div>
