--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -80,7 +80,7 @@
               formControlName="role" 
               optionLabel="name" 
               optionValue="id" 
-              placeholder="Chọn vai trò" 
+              placeholder="{{'choose.role' | translate}}" 
               [filter]="true" 
               filterBy="name" 
               [showClear]="true"  
