--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -4,21 +4,21 @@
   </div>
   <div class="content">
     <div class="name-item">
-      <div class="label_item">Số điện thoại: <span class="require_star">*</span></div>
+      <div class="label_item">{{'user.phone' | translate}}: <span class="require_star">*</span></div>
       <div class="form-control input-line">
         <input style="font-size: 14px;" autocomplete="off" type="text" [(ngModel)]="phoneNum" class="input-text" placeholder="Nhập số điện thoại" autofocus>
       </div>
     </div>
 
     <div class="name-item">
-      <div class="label_item">Nhà mạng: <span class="require_star">*</span></div>
+      <div class="label_item">{{'network.operator' | translate}}: <span class="require_star">*</span></div>
       <p-dropdown
         panelStyleClass="font" class="pki-dialog"
         [options]="nl"
         [(ngModel)]="networkCode"
         optionLabel="name"
         optionValue="id"
-        placeholder="Chọn nhà mạng"
+        placeholder="{{'choose.network' | translate}}"
         [showClear]="true"
       ></p-dropdown>
       <!--<ngx-select [items]="optionsNetworkCompany" [placeholder]="'Chọn nhà mạng'" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
@@ -28,11 +28,11 @@
       <button
         class="dx-button-form dx-button-close dx-button-90"
         (click)="dialogRef.close()"
-        type="button">Thoát
+        type="button">{{'exit' | translate}}
       </button>
       <button
         class="dx-button-form dx-button-submit dx-button-90" (click)="onSubmit()"
-        type="default">Xác nhận
+        type="default">{{'confirm' | translate}}
       </button>
     </div>
   </div>
