--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -2,24 +2,23 @@
   <!--  information contract-->
   <div class="col-md-3 sample-contract__information" style="background-color: white;">
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
-      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label">THÔNG TIN CHI TIẾT HỢP
-        ĐỒNG
+      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label">{{'contract.detail' | translate}}
       </div>
       <div style="line-height: 25px">
         <div>
-          <span class="title-contract">Loại hợp đồng:</span>
+          <span class="title-contract">{{'contract.type' | translate}}:</span>
           <span>{{datas.is_data_contract.type_id}}</span>
         </div>
         <div>
-          <span class="title-contract">Tên hợp đồng:</span>
+          <span class="title-contract">{{'contract.name' | translate}}:</span>
           <span>{{datas.is_data_contract.name}}</span>
         </div>
         <div>
-          <span class="title-contract">Số hợp đồng:</span>
+          <span class="title-contract">{{'contract.number' | translate}}:</span>
           <span>{{datas.is_data_contract.code}}</span>
         </div>
         <div>
-          <span class="title-contract">File đính kèm:</span>
+          <span class="title-contract">{{'file.attach' | translate}}:</span>
 <!--          this.datas.i_data_file_contract-->
           <span *ngFor="let d of getFileAttach(), let i = index">
               <a style="color: #106DB6" rel="stylesheet" href="{{d.path}}" target="_blank">
@@ -38,22 +37,13 @@
             <span>{{i == (this.datas.is_data_contract.refs.length - 1) ? '' : ', '}}</span>
           </span>
         </div>
-
-<!--        <div class="title-contract" style="display: inline-block">Hợp đồng liên quan:</div>-->
-<!--        <div style="display: inline-block; color: #106DB6"-->
-<!--             *ngFor="let d of this.datas.is_data_contract.refs; let i = index">-->
-<!--          <span class="text-decoration-style">{{d.ref_id}}</span>-->
-<!--          <span>{{i == (this.datas.is_data_contract.refs.length - 1) ? '' : ', '}}</span>-->
-<!--        </div>-->
-<!--        <div style="display: inline-block">-->
-
         </div>
       </div>
       <hr>
 
       <div class="location-change" [ngStyle]="changeDisplay()">
         <div class="sample-contract__information--user-sign" style="line-height: 25px">
-          <div style="text-align: center; font-weight: bold" class="label">CÁC BÊN LIÊN QUAN</div>
+          <div style="text-align: center; font-weight: bold" class="label">{{'relate.party' | translate}}</div>
           <!--        <div *ngFor="let d of this.isPartySignature">-->
           <!--          <div>{{d.name}}</div>-->
           <!--        </div>-->
@@ -63,8 +53,7 @@
 
         </div>
         <div>
-          <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">Luồng xử lý
-            hợp đồng</u>
+          <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">{{'contract_processing_flow' | translate}}</u>
         </div>
         <hr>
       </div>
