--- a/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
+++ b/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
@@ -1,21 +1,21 @@
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-size: 20px; font-weight: bold">{{'CẢNH BÁO'}}</h3>
+      <h3 style="color: #106DB6; font-size: 20px; font-weight: bold">{{'alert' | translate}}</h3>
     </div>
     <div class="content">
       <div class="name-item">
-        <div style="font-size: 16px">Bạn có chắc chắn đồng ý với nội dung, điều khoản của tất cả các hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?
+        <div style="font-size: 16px">{{'multi.sign.question' | translate}}
         </div>
       </div>
   
       <div class="select-option">
         <button (click)="dialog.closeAll()"
           class="dx-button-form dx-button-close dx-button-90"
-          type="button">Huỷ bỏ
+          type="button">{{'contract.status.cancel' | translate}}
         </button>
         <button
           class="dx-button-form dx-button-submit dx-button-90" (click)="onSubmit()"
-          type="default">Đồng ý và ký
+          type="default">{{'ok.sign' | translate}}
         </button>
       </div>
     </div>
