--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -42,7 +42,7 @@
             
             <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
 
-              <!-- <div class="participants--input" style="display: flex">
+              <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -64,7 +64,7 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -201,7 +201,7 @@
             >
 
                 <!--Chọn   {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại với người ký tổ chức của tôi-->
-                <!-- <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
@@ -222,7 +222,7 @@
                       </div>
                     </div>
                   </div>
-                </div> -->
+                </div>
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -775,7 +775,7 @@
               />
               <div class="col-md-10 participants__content--input">
 
-                <!-- <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -797,7 +797,7 @@
                       </div>
                     </div>
                   </div>
-                </div> -->
+                </div>
 
                 <div class="participants--input">
                   <div class="participants__name">
@@ -918,7 +918,7 @@
                 class="col-md-10 participants__content--input"
                 style="display: flex; flex-direction: column"
               >
-              <!-- <div class="participants--input" style="display: flex">
+              <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
 
@@ -940,7 +940,7 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -1347,7 +1347,7 @@
                 style="display: flex; flex-direction: column"
               >
 
-                <!-- <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -1369,7 +1369,7 @@
                       </div>
                     </div>
                   </div>
-                </div> -->
+                </div>
 
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
