--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -22,115 +22,82 @@
 
         <!--người xem xét-->
         <div class="participants-border">
-          <div class="label">{{ "user.view" | translate }}</div>
-          <div
-            class="participants--content"
-            *ngFor="let d of getOriganzationReviewer(); let index = index"
-          >
-            <input
-              [id]="'ordering-organzation-view-' + index"
-              class="col-md-1 contract-total"
-              (focusout)="
-                onChangeValue($event, 'ordering-organzation-view-' + index)
-              "
-              style="width: 25px; height: 25px"
-              type="number"
-              [(ngModel)]="d.ordering"
-              oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationReviewer().length == 1"
-            />
-            
-            <div class="col-md-10 participants--input" style="display: flex; flex-direction: column">
+          <div class="label">{{'user.view' | translate}}</div>
+          <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
+            <input [id]="'ordering-organzation-view-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px" type="number"
+                   [(ngModel)]="d.ordering"
+                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationReviewer().length == 1">
+            <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-              <div class="participants--input" style="display: flex">
-                <div class="participants__name">
-                  <div class="label_detail text-color">
-
-                    <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
-                    </div>&nbsp;
-                    <div>
-                      {{'typeOfSignEmail' | translate}}
+                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                 <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+  
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng email' | translate}}
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                      </div>&nbsp;
+                      <div>
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="participants__name">
-                  <div class="label_detail text-color">
-                    <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
-                    </div>&nbsp;
-                    <div>
-                      {{'typeOfSignPhone' | translate}}
-                    </div>
-                  </div>
-                </div>
-              </div>
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
-                  <div class="label_detail text-color">
-                    {{ "user.name" | translate }}&nbsp;<span
-                      class="required-title"
-                      >*</span
-                    >
-                  </div>
+                  <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img" />
-                    <input *ngIf="d.login_by === 'email'"
-                      type="text"
-                      placeholder="{{ 'nhap_ho_va_ten' | translate }}"
-                      (focusin)="onFocusIn($event, index, 'view')"
-                      (ngxInputSearch)="doTheSearch($event, index, 'view')"
-                      [(ngModel)]="d.name"
-                      (focusout)="onFocusOut($event, d)"
-                    />
+                    <img src="assets/img/icon_name.svg" class="input-img">
+          
+                    <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                          (focusin)="onFocusIn($event, index, 'view')"
+                          (ngxInputSearch)="doTheSearch($event, index, 'view')" [(ngModel)]="d.name"
+                          (focusout)="onFocusOut($event, d)">
 
-                    <input *ngIf="d.login_by === 'phone'"
-                      type="text"
-                      placeholder="{{ 'nhap_ho_va_ten' | translate }}"
-                      (focusin)="onFocusIn($event, index, 'view')"
-                      [(ngModel)]="d.name"
-                      (focusout)="onFocusOut($event, d)"
-                    />
+                    <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                          (focusin)="onFocusIn($event, index, 'view')"
+                          [(ngModel)]="d.name"
+                          (focusout)="onFocusOut($event, d)">
                   </div>
-                  <div
-                    class="search-name"
-                    *ngIf="
-                      this.arrSearch[index] &&
-                      this.arrSearchNameView &&
-                      arrSearchNameView.length > 0
-                    "
-                  >
-                    <button
-                      class="search-name-items"
-                      *ngFor="let t of this.arrSearchNameView"
-                      (click)="onSelectName(t, d)"
-                    >
-                      {{ t.name }} ({{ t.email }})
+                  <div class="search-name"
+                      *ngIf="this.arrSearch[index] && this.arrSearchNameView && arrSearchNameView.length > 0">
+                    <button class="search-name-items" *ngFor="let t of this.arrSearchNameView"
+                            (click)="onSelectName(t, d)">{{t.name}} ({{t.email}})
                     </button>
                   </div>
                 </div>
-
-                <div *ngIf="this.site == 'KD'" class="participants--input" style="display: flex">
-                  <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+           
+                  <!--NB-->
+                  <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
-
-                  <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
+  
+                  <div class="participants__name" *ngIf="d.login_by == 'phone' && this.site == 'NB'">
                     <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img class="input-img">
-                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
-                </div>
 
-                <!--NB-->
-                <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
+                  
+               <!--KD-->
+                <div *ngIf="d.login_by === 'email' && this.site == 'KD'" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
@@ -138,11 +105,11 @@
                   </div>
                 </div>
 
-                <div class="participants__name" *ngIf="d.login_by == 'phone' && this.site == 'NB'">
+                <div *ngIf="d.login_by === 'phone' && this.site == 'KD'" class="participants__name">
                   <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img class="input-img">
-                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
               </div>
@@ -157,24 +124,15 @@
                   </div>
                 </div>
               </div>
+             
             </div>
-            
-            <div
-              class="col-md-1 delete-element"
-              (click)="deleteOriganzationReviewer(index)"
-            >
-              <img src="assets/img/border_close.svg" alt="close.vn" />
-              <img
-                class="close-btn"
-                src="assets/img/x_close.svg"
-                alt="close.vn"
-              />
+            <div class="col-md-1 delete-element" (click)="deleteOriganzationReviewer(index)">
+              <img src="assets/img/border_close.svg" alt="close.vn">
+              <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
             </div>
           </div>
           <div class="participants--add">
-            <u class="label text-color" (click)="addOriganzationReviewer()">{{
-              "btn.add.user.view" | translate
-            }}</u>
+            <u class="label text-color" (click)="addOriganzationReviewer()">{{'btn.add.user.view' | translate}}</u>
           </div>
         </div>
 
