--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -28,16 +28,13 @@
         <div class="participants-border">
           <div class="label">{{'user.view' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
-            <input [id]="'ordering-organzation-view-' + index" class="col-md-1 contract-total"
-              (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px"
-              type="number" [(ngModel)]="d.ordering"
-              oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-              [disabled]="getOriganzationReviewer().length == 1">
-
+            <input [id]="'ordering-organzation-view-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px" type="number"
+                   [(ngModel)]="d.ordering"
+                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationReviewer().length == 1">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-                <!--Chọn {{'typeOfSignEmail' | translate}} hoặc {{'user.phone' | translate}} cho nguoi xem xet to chuc-->
-                <div class="participants--input" style="display: flex">
+                 <!--Chọn {{'Đăng nhập bằng email' | translate}} hoặc số điện thoại cho nguoi xem xet to chuc-->
+                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">
   
@@ -45,7 +42,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'Đăng nhập bằng email' | translate}}
                       </div>
                     </div>
                   </div>
@@ -55,7 +52,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignPhone' | translate}}
+                        {{'Đăng nhập bằng số điện thoại' | translate}}
                       </div>
                     </div>
                   </div>
@@ -66,28 +63,45 @@
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-
-                    <!--Trường hợp typeOfSignEmail đối với người xem xét-->
+          
                     <input *ngIf="d.login_by === 'email'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                      (focusin)="onFocusIn($event, index, 'view')" (ngxInputSearch)="doTheSearch($event, index, 'view')"
-                      [(ngModel)]="d.name" (focusout)="onFocusOut($event, d)">
+                          (focusin)="onFocusIn($event, index, 'view')"
+                          (ngxInputSearch)="doTheSearch($event, index, 'view')" [(ngModel)]="d.name"
+                          (focusout)="onFocusOut($event, d)">
 
-                    <!--Trường hợp typeOfSignPhone đối với người xem xét-->
-                      <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                      (focusin)="onFocusIn($event, index, 'view')"
-                      [(ngModel)]="d.name" (focusout)="onFocusOut($event, d)">
+                    <input *ngIf="d.login_by === 'phone'" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
+                          (focusin)="onFocusIn($event, index, 'view')"
+                          [(ngModel)]="d.name"
+                          (focusout)="onFocusOut($event, d)">
                   </div>
                   <div class="search-name"
-                    *ngIf="this.arrSearch[index] && this.arrSearchNameView && arrSearchNameView.length > 0">
+                      *ngIf="this.arrSearch[index] && this.arrSearchNameView && arrSearchNameView.length > 0">
                     <button class="search-name-items" *ngFor="let t of this.arrSearchNameView"
-                      (click)="onSelectName(t, d)">{{t.name}} ({{t.email}})
+                            (click)="onSelectName(t, d)">{{t.name}} ({{t.email}})
                     </button>
                   </div>
                 </div>
+           
+                  <!--NB-->
+                  <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
+                    <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+  
+                  <div class="participants__name" *ngIf="d.login_by == 'phone' && this.site == 'NB'">
+                    <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img class="input-img">
+                      <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
+                    </div>
+                  </div>
 
-                   <!--KD-->
-               <div *ngIf="this.site == 'KD'" class="participants--input" style="display: flex">
-                <div *ngIf="d.login_by === 'email'" class="participants__name" style="width: 90%">
+                  
+               <!--KD-->
+                <div *ngIf="d.login_by === 'email' && this.site == 'KD'" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
@@ -95,7 +109,7 @@
                   </div>
                 </div>
 
-                <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
+                <div *ngIf="d.login_by === 'phone' && this.site == 'KD'" class="participants__name">
                   <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img class="input-img">
@@ -104,26 +118,8 @@
                 </div>
               </div>
 
-                <!--NB-->
-                <div class="participants__name" *ngIf="d.login_by == 'email' && this.site == 'NB'">
-                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                  </div>
-                </div>
-
-                <div class="participants__name" *ngIf="d.login_by == 'phone' && this.site == 'NB'">
-                  <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img class="input-img">
-                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
-                  </div>
-                </div>
-              </div>
-
-              <!--NB email-->
-              <div *ngIf="this.site == 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
+               <!--NB email-->
+               <div *ngIf="this.site == 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
                   <div class="input-data">
@@ -132,6 +128,7 @@
                   </div>
                 </div>
               </div>
+             
             </div>
             <div class="col-md-1 delete-element" (click)="deleteOriganzationReviewer(index)">
               <img src="assets/img/border_close.svg" alt="close.vn">
