--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -18,8 +18,20 @@
                             id="element-drag" style="height: 102px; flex-direction: column" [ngStyle]="setWidth(d)">
                             <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'"
                                 [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
-                            <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
-                                'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span>
+                            <!-- <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
+                                'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span> -->
+                            <div *ngIf="d.sign_unit == 'chu_ky_so'" class="content-drag1" 
+                                id="element-drag" style="height: 102px;" [ngStyle]="setWidth(d)">
+                                <img [src]="d.sign_unit == 'chu_ky_so' ? 'assets/img/img_sign_number.svg' : ''">
+                                <span *ngIf="d.sign_unit == 'chu_ky_so'">{{'sign.digital'|translate}}</span>
+                            </div>
+    
+                            <div *ngIf="d.sign_unit == 'chu_ky_anh'" class="content-drag"
+                                id="element-drag" style="height: 102px;" [ngStyle]="setWidth(d)">
+                                <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : ''"
+                                    [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
+                                <span *ngIf="d.sign_unit == 'chu_ky_anh'">{{'sign.image.ekyc' |translate}}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -30,17 +42,17 @@
 
         <div class="location-change">
             <div class="sample-contract__information--user-sign">
-                <label class="label">THUỘC TÍNH</label>
+                <label class="label">{{'attribute' | translate}}</label>
                 <div class="name-text" *ngIf="isEnableText">
-                    <label class="label-require">Tên trường: *</label>
+                    <label class="label-require">{{'attribute.name' | translate}}: *</label>
                     <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name"
                         (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
                 </div>
                 <div class="sign-unit-select">
-                    <label class="label-require">{{isEnableText || isChangeText ? "Người nhập" : "Người ký"}}: *</label>
+                    <label class="label-require">{{isEnableText || isChangeText ? "user.import" : "user.sign" | translate}}: *</label>
                     <select class="form-select" id="select-dropdown" aria-label="Default select example"
                         (change)="changePositionSign($event, null, 'name-signature')" [disabled]="isEnableSelect">
-                        <option value="" hidden>Chọn người ký</option>
+                        <option value="" hidden>{{"choose.signer" | translate}}</option>
                         <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected"
                             value="{{d.email}}" [disabled]="d.is_disable">{{getName(d)}}</option>
                     </select>
@@ -49,7 +61,7 @@
             </div>
             <hr>
             <div class="flex-column">
-                <label class="label-require">Vị trí</label>
+                <label class="label-require">{{'position.coordinate' | translate}}</label>
                 <div class="location">
                     <div class="location-drag">
                         <div class="label" style="text-align: center">X:</div>
@@ -65,15 +77,15 @@
             </div>
             <hr>
             <div class="flex-column">
-                <label class="label-require">Kích thước</label>
+                <label class="label-require">{{'size' | translate}}</label>
                 <div class="location">
                     <div class="location-drag">
-                        <div class="label" style="font-size: 12px">Chiều dài</div>
+                        <div class="label" style="font-size: 12px">{{'height' | translate}}</div>
                         <input type="number" (ngModelChange)="changePositionSign($event, 'width', 'size')"
                             [ngModel]="objSignInfo.width" [readOnly]="false">
                     </div>
                     <div class="location-drag">
-                        <div class="label" style="font-size: 12px">Chiều rộng</div>
+                        <div class="label" style="font-size: 12px">{{'width' | translate}}</div>
                         <input type="number" (ngModelChange)="changePositionSign($event, 'height', 'size')"
                             [ngModel]="objSignInfo.height" [readOnly]="false">
                     </div>
@@ -104,7 +116,7 @@
     <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button"
         style="background-color: #8B8B8B">Quay lại</button>
     <div>
-        <button (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
+        <button (click)="next()" type="button" name="next" class="next action-button">{{'btn.next' | translate}}</button>
     </div>
 </div>
 
