--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -2,8 +2,8 @@
      style="width: 140px;min-height: 40px; font-size: 9px">
   <div class="signature-content"
        style="margin-left: 6px; color: #0872C9;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
-    <div style="z-index: 2; text-align: left;">Loại ký: Ký ảnh và OTP</div>
-    <div style="z-index: 2; text-align: left;">Người ký: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</div>
+    <div style="z-index: 2; text-align: left;">Loại ký: {{'sign.image.otp' | translate}}</div>
+    <div style="z-index: 2; text-align: left;">{{'user.sign' | translate}}: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</div>
     <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime}}</div>
   </div>
 </div>
@@ -14,7 +14,7 @@
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
   <div class="signature-content"
        style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: Ký ảnh và otp</span>
+    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: {{'sign.image.otp' | translate}}</span>
     <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Người ký: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</span>
     <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime}}</span>
   </div>
