--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.scss
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.scss
@@ -9,3 +9,9 @@
     border-radius: 5px;
     padding: 3px 10px;
 }
+// img{
+//     width: 40px;
+//     cursor: pointer;
+//     padding: 0 10px;
+
+// }
