--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -17,8 +17,12 @@
                             id="element-drag" style="height: 102px; flex-direction: column" [ngStyle]="setWidth(d)">
                             <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'"
                                 [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''" alt="ck.mobifone">
-                            <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
-                                'chu_ky_anh' ? 'Chữ ký ảnh hoặc eKYC' : 'Chữ ký số'}}</span>
+                            <!-- <span *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit ==
+                                'chu_ky_anh' ? 'Chữ ký ảnh hoặc eKYC' : 'Chữ ký số'}}</span> -->
+
+                                <span *ngIf="d.sign_unit == 'chu_ky_anh' ">{{'sign.image.ekyc' |translate}}</span>
+                                <span *ngIf="d.sign_unit == 'chu_ky_so' ">{{'sign.digital'|translate}}</span>
+
                         </div>
                     </div>
                 </div>
@@ -36,15 +40,16 @@
                         (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
                 </div>
                 <div class="sign-unit-select">
-                    <label class="label-require">{{isEnableText || isChangeText ? "Người nhập" : "Người ký"}}: *</label>
+                    <label class="label-require">{{isEnableText || isChangeText ? "user.import" : "user.sign" | translate}}: *</label>
                     <select class="form-select" id="select-dropdown" aria-label="Default select example"
                         (change)="changePositionSign($event, null, 'name-signature')" [disabled]="isEnableSelect">
-                        <option value="" hidden>{{isEnableText || isChangeText ? "Chọn người nhập" : "Chọn người ký"}}
-                        </option>
+                        <option value="" hidden>{{isEnableText || isChangeText ? "choose.importer" : "choose.signer" | translate}}
                         <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected"
                             value="{{d.id}}" [disabled]="d.is_disable">{{getName(d)}}</option>
                     </select>
                 </div>
+                
+                
 
             </div>
             <hr>
